add system tray support